[tool.poetry]
name = "community-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Andrii Kudenko <andrii.kudenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.7.0"
sqlalchemy = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
